cabal-version:       >=1.10
name:                tidal-fuzz-test
version:             0.1.0.0
license:        GPL-3
author:              Johannes Waldmann
maintainer:          @
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

test-suite tidal-fuzz-test
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base, tidal, random, deepseq, containers
  default-language:    Haskell2010
