cabal-version:       >=1.10
name:                tidal-fuzz-test
version:             0.1.0.0
license:        GPL-3
author:              Johannes Waldmann
maintainer:          @
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs: src
  exposed-modules: Sound.Tidal.PrintBP
  build-depends: base, tidal, leancheck
                     
test-suite tidal-fuzz-test
  type: exitcode-stdio-1.0
  main-is:             Fuzz.hs
  build-depends:
    base, tidal, random, deepseq, containers
  default-language:    Haskell2010

test-suite tidal-tpat-test
  type: exitcode-stdio-1.0
  main-is:             TPat.hs
  build-depends: tidal-fuzz-test,
    base, tidal, random, deepseq, containers, leancheck
  default-language:    Haskell2010

test-suite tidal-rand-test
  type: exitcode-stdio-1.0
  main-is:             Rand.hs
  build-depends: base, tidal
  default-language:    Haskell2010

test-suite tidal-fix-test
  type: exitcode-stdio-1.0
  main-is:             Fix.hs
  build-depends: base, tidal
  default-language:    Haskell2010
  
